Fix for overlapping tooltip labels Default sensors table message Fix for error caused by required attribute of Notify field

--- a/src/dataloaderinterface/static/dataloaderinterface/css/style.css
+++ b/src/dataloaderinterface/static/dataloaderinterface/css/style.css
@@ -815,6 +815,14 @@ i.material-icons.site-card-icon {
     vertical-align: sub;
 }
 
+tr.no-sensors-row:hover {
+    background-color: #FFF !important;
+}
+
+label[for='id_hours_threshold']::after{
+    display: none;
+}
+
 /*LOGIN STYLING*/
 
 .panel {
